--- a/portFolio/index.html
+++ b/portFolio/index.html
@@ -14,7 +14,7 @@
         Confirm
       </button>
       <button
-        onclick="revealMyInfo('내 이름은 h662 입니다.', '.myName', '#123456')"
+        onclick="revealMyInfo('내 이름은 SEJUN 입니다.', '.myName', '#123456')"
       >
         확인
       </button>
@@ -28,8 +28,8 @@
       </button>
     </div>
     <div>
-      <span class="myFavorite">What is your favorite?</span>
-      <button onclick="revealMyInfo('Zero Coke', '.myFavorite', '#000000')">
+      <span class="myFavorite">What is your hobby?</span>
+      <button onclick="revealMyInfo('Jiu Jit Su', '.myFavorite', '#000000')">
         Confirm
       </button>
     </div>
