--- a/portFolio/index.html
+++ b/portFolio/index.html
@@ -10,11 +10,11 @@
   <body>
     <div>
       <span class="myName">What is your name?</span>
-      <button onclick="revealMyInfo('My name is h662.', '.myName', '#123456')">
+      <button onclick="revealMyInfo('My name is SeJun.', '.myName', '#123456')">
         Confirm
       </button>
       <button
-        onclick="revealMyInfo('내 이름은 SEJUN 입니다.', '.myName', '#123456')"
+        onclick="revealMyInfo('내 이름은 세준 입니다.', '.myName', '#123456')"
       >
         확인
       </button>
